Closed Bug 167178 Opened 23 years ago Closed 22 years ago

chimera crashes trying to load scriptability flash test

Categories

(Camino Graveyard :: Plug-ins, defect, P1)

PowerPC
macOS
defect

Tracking

(Not tracked)

VERIFIED FIXED
Camino0.7

People

(Reporter: shrir, Assigned: peterl-bugs)

References

()

Details

(Keywords: crash)

Attachments

(1 file, 1 obsolete file)

seen on 0905 chimera build on jaguar this is critical...one won't be able to run any scriptability tests on this build steps: install flash 6.0r47 from macromedia (scriptable) ; make sure the flashplayer.xpt is in plugins iolder/ internet plugins folder. laod the above test ...CRASH ! log: 35 Exception: EXC_BAD_INSTRUCTION (0x0002) Code[0]: 0x00000002Code[1]: 0x0270c640 Thread 0 Crashed: #0 0x0270c640 in 0x270c640 #1 0x0509755c in nsCOMPtr_base::assign_from_helper(nsCOMPtr_helper const &, nsID const &) #2 0x007208bc in XPCWrappedNative::GetNewOrUsed(XPCCallContext &, nsISupports *, XPCWrappedNativeScope *, XPCNativeInterface *, XPCWrappedNative * *) #3 0x00729d24 in XPCConvert::NativeInterface2JSObject(XPCCallContext &, nsIXPConnectJSObjectHolder **, nsISupports *, nsID const *, JSObject *, unsigned int *) #4 0x004769c4 in nsXPConnect::WrapNative(JSContext *, JSObject *, nsISupports *, nsID const &, nsIXPConnectJSObjectHolder **) #5 0x00084700 in nsHTMLPluginObjElementSH::GetPluginJSObject(JSContext *, JSObject *, nsIPluginInstance *, JSObject **, JSObject **) #6 0x00084060 in nsHTMLExternalObjSH::PostCreate(nsIXPConnectWrappedNative * , JSContext *, JSObject *) #7 0x007211a4 in XPCWrappedNative::GetNewOrUsed(XPCCallContext &, nsISupports *, XPCWrappedNativeScope *, XPCNativeInterface *, XPCWrappedNative * *) #8 0x00720be8 in XPCWrappedNative::GetNewOrUsed(XPCCallContext &, nsISupports *, XPCWrappedNativeScope *, XPCNativeInterface *, XPCWrappedNative * *) #9 0x00729d24 in XPCConvert::NativeInterface2JSObject(XPCCallContext &, nsIXPConnectJSObjectHolder **, nsISupports *, nsID const *, JSObject *, unsigned int *) #10 0x004769c4 in nsXPConnect::WrapNative(JSContext *, JSObject *, nsISupports *, nsID const &, nsIXPConnectJSObjectHolder **) #11 0x00076940 in nsDOMClassInfo::WrapNative(JSContext *, JSObject *, nsISupports *, nsID const &, long *) #12 0x00081a8c in nsArraySH::GetProperty(nsIXPConnectWrappedNative *, JSContext *, JSObject *, long, long *, int *) #13 0x00081c68 in nsNamedArraySH::GetProperty(nsIXPConnectWrappedNative *, JSContext *, JSObject *, long, long *, int *) #14 0x0072de4c in XPC_WN_Helper_GetProperty(JSContext *, JSObject *, long, long * ) #15 0x0403aa88 in js_GetProperty #16 0x0402ed6c in js_Interpret #17 0x04027eec in js_Execute #18 0x04006bfc in JS_EvaluateUCScriptForPrincipals #19 0x0008b894 in nsJSContext::EvaluateString(nsAString const &, void *, nsIPrincipal *, char const *, unsigned int, char const *, nsAString &, int *) #20 0x0004e5a0 in nsJSThunk::EvaluateScript(void) #21 0x0004f360 in nsJSChannel::AsyncOpen(nsIStreamListener *, nsISupports *) #22 0x003feda4 in nsDocumentOpenInfo::Open(nsIChannel *, int, nsISupports *) #23 0x00400020 in nsURILoader::OpenURIVia(nsIChannel *, int, nsISupports *, unsigned int) #24 0x003ffe6c in nsURILoader::OpenURI(nsIChannel *, int, nsISupports *) #25 0x004b477c in nsDocShell::DoChannelLoad(nsIChannel *, nsIURILoader *) #26 0x004b3f64 in nsDocShell::DoURILoad(nsIURI *, nsIURI *, nsISupports *, nsIInputStream *, nsIInputStream *, int, nsIDocShell **, nsIRequest **) #27 0x004b32f8 in nsDocShell::InternalLoad(nsIURI *, nsIURI *, nsISupports *, int, unsigned short const *, nsIInputStream *, nsIInputStream *, unsigned int, nsISHEntry *, int, nsIDocShell **, nsIRequest **) #28 0x00121598 in nsWebShell::OnLinkClickSync(nsIContent *, nsLinkVerb, unsigned short const *, unsigned short const *, nsIInputStream *, nsIInputStream *, nsIDocShell **, nsIRequest **) #29 0x00120d78 in HandlePLEvent(OnLinkClickEvent *) #30 0x05056e80 in PL_HandleEvent #31 0x05056d68 in PL_ProcessPendingEvents #32 0x05057d30 in nsEventQueueImpl::ProcessPendingEvents(void) #33 0x00433b74 in -[EventQueueHandler eventTimer:] #34 0x907e521c in __NSFireTimer #35 0x90163884 in __CFRunLoopDoTimer #36 0x901493e8 in __CFRunLoopRun #37 0x90181578 in CFRunLoopRunSpecific #38 0x92ba34cc in RunCurrentEventLoopInMode #39 0x92bb32f4 in ReceiveNextEventCommon #40 0x92bda280 in BlockUntilNextEventMatchingListInMode #41 0x93082184 in _DPSNextEvent #42 0x930ccf84 in -[NSApplication nextEventMatchingMask:untilDate:inMode:dequeue:] #43 0x930ca500 in -[NSApplication run] #44 0x930d2598 in NSApplicationMain #45 0x00005024 in main #46 0x00004ed4 in _start #47 0x00004d04 in start Thread 1: #0 0x90025e8c in select #1 0x0101d804 in poll #2 0x01019ecc in _pr_poll_with_poll #3 0x0016a68c in nsSocketTransportService::Run(void) #4 0x050598f0 in nsThread::Main(void *) #5 0x0101b388 in _pt_root #6 0x90021428 in _pthread_body Thread 2: #0 0x9003f188 in semaphore_wait_signal_trap #1 0x9003efa4 in _pthread_cond_wait #2 0x01016474 in PR_WaitCondVar #3 0x0014b2cc in nsDNSService::DequeuePendingQ(void) #4 0x0014acd4 in nsDNSService::Run(void) #5 0x050598f0 in nsThread::Main(void *) #6 0x0101b388 in _pt_root #7 0x90021428 in _pthread_body Thread 3: #0 0x90042d68 in semaphore_timedwait_signal_trap #1 0x9003ef94 in _pthread_cond_wait #2 0x01016210 in pt_TimedWait #3 0x01016488 in PR_WaitCondVar #4 0x0505d38c in TimerThread::Run(void) #5 0x050598f0 in nsThread::Main(void *) #6 0x0101b388 in _pt_root #7 0x90021428 in _pthread_body Thread 4: #0 0x9003f188 in semaphore_wait_signal_trap #1 0x9003efa4 in _pthread_cond_wait #2 0x01016474 in PR_WaitCondVar #3 0x0505aa2c in nsThreadPool::GetRequest(nsIThread *) #4 0x0505b3a0 in nsThreadPoolRunnable::Run(void) #5 0x050598f0 in nsThread::Main(void *) #6 0x0101b388 in _pt_root #7 0x90021428 in _pthread_body Thread 5: #0 0x9003f188 in semaphore_wait_signal_trap #1 0x9003efa4 in _pthread_cond_wait #2 0x90824180 in -[NSConditionLock lockWhenCondition:] #3 0x933515f4 in -[NSUIHeartBeat _heartBeatThread:] #4 0x9081cd38 in forkThreadForFunction #5 0x90021428 in _pthread_body Thread 6: #0 0x90074328 in mach_msg_trap #1 0x90006670 in mach_msg #2 0x901490b0 in __CFRunLoopRun #3 0x90181578 in CFRunLoopRunSpecific #4 0x905e2d90 in XIOAudioDeviceManager::NotificationThread(XIOAudioDeviceManager*) #5 0x905e2cac in CAPThread::Entry(CAPThread*) #6 0x90021428 in _pthread_body PPC Thread State: srr0: 0x0270c640 srr1: 0x0208f030 vrsave: 0x00000000 xer: 0x00000000 lr: 0x0509742c ctr: 0x0270c640 mq: 0x00000000 r0: 0x0270c640 r1: 0xbfffd1b0 r2: 0x00000000 r3: 0x02ca5390 r4: 0x00960dd8 r5: 0xbfffd238 r6: 0x02361f40 r7: 0xbfffd378 r8: 0x00e2f010 r9: 0x0271c244 r10: 0x00000002 r11: 0x050c63dc r12: 0x0270c640 r13: 0x0244c07c r14: 0x00000000 r15: 0x0008a31c r16: 0x02ca5390 r17: 0xbfffd378 r18: 0x02361f40 r19: 0x024466c0 r20: 0xbfffd590 r21: 0xbfffd4ec r22: 0xbfffd4c8 r23: 0xbfffd288 r24: 0x050c63dc r25: 0xbfffd3f8 r26: 0xbfffd28c r27: 0xbfffd3f8 r28: 0xbfffd368 r29: 0xbfffd288 r30: 0xbfffd28c r31: 0x00720864 ********** Date/Time: 2002-09-06 14:19:42 -0700 OS Version: 10.2 (Build 6C115) Host: h-10-169-102-126.nscp.aoltw.net Command: Navigator PID: 639 Exception: EXC_BAD_INSTRUCTION (0x0002) Code[0]: 0x00000002Code[1]: 0x04c0c640 Thread 0 Crashed: #0 0x04c0c640 in 0x4c0c640 #1 0x0509755c in nsCOMPtr_base::assign_from_helper(nsCOMPtr_helper const &, nsID const &) #2 0x007208bc in XPCWrappedNative::GetNewOrUsed(XPCCallContext &, nsISupports *, XPCWrappedNativeScope *, XPCNativeInterface *, XPCWrappedNative * *) #3 0x00729d24 in XPCConvert::NativeInterface2JSObject(XPCCallContext &, nsIXPConnectJSObjectHolder **, nsISupports *, nsID const *, JSObject *, unsigned int *) #4 0x004769c4 in nsXPConnect::WrapNative(JSContext *, JSObject *, nsISupports *, nsID const &, nsIXPConnectJSObjectHolder **) #5 0x00084700 in nsHTMLPluginObjElementSH::GetPluginJSObject(JSContext *, JSObject *, nsIPluginInstance *, JSObject **, JSObject **) #6 0x00084060 in nsHTMLExternalObjSH::PostCreate(nsIXPConnectWrappedNative * , JSContext *, JSObject *) #7 0x007211a4 in XPCWrappedNative::GetNewOrUsed(XPCCallContext &, nsISupports *, XPCWrappedNativeScope *, XPCNativeInterface *, XPCWrappedNative * *) #8 0x00729d24 in XPCConvert::NativeInterface2JSObject(XPCCallContext &, nsIXPConnectJSObjectHolder **, nsISupports *, nsID const *, JSObject *, unsigned int *) #9 0x004769c4 in nsXPConnect::WrapNative(JSContext *, JSObject *, nsISupports *, nsID const &, nsIXPConnectJSObjectHolder **) #10 0x00076940 in nsDOMClassInfo::WrapNative(JSContext *, JSObject *, nsISupports *, nsID const &, long *) #11 0x00081c00 in nsNamedArraySH::GetProperty(nsIXPConnectWrappedNative *, JSContext *, JSObject *, long, long *, int *) #12 0x0072de4c in XPC_WN_Helper_GetProperty(JSContext *, JSObject *, long, long * ) #13 0x0403aa88 in js_GetProperty #14 0x0402e6c0 in js_Interpret #15 0x04027eec in js_Execute #16 0x04006bfc in JS_EvaluateUCScriptForPrincipals #17 0x0008b894 in nsJSContext::EvaluateString(nsAString const &, void *, nsIPrincipal *, char const *, unsigned int, char const *, nsAString &, int *) #18 0x0004e5a0 in nsJSThunk::EvaluateScript(void) #19 0x0004f360 in nsJSChannel::AsyncOpen(nsIStreamListener *, nsISupports *) #20 0x0039a590 in nsPluginHostImpl::NewPluginURLStream(nsString const &, nsIPluginInstance *, nsIPluginStreamListener *, char const *, int, unsigned int, char const *, unsigned int) #21 0x0039323c in nsPluginHostImpl::GetURLWithHeaders(nsISupports *, char const *, char const *, nsIPluginStreamListener *, char const *, char const *, int, unsigned int, char const *) #22 0x00393034 in nsPluginHostImpl::GetURL(nsISupports *, char const *, char const *, nsIPluginStreamListener *, char const *, char const *, int) #23 0x0039f240 in MakeNew4xStreamInternal__FP4_NPPPCcn122eNPPStreamTypeInternaliPvUiPCcUc #24 0x0039f2f8 in _geturl #25 0x04b0bd58 in 0x4b0bd58 #26 0x04b156d4 in 0x4b156d4 #27 0x04b175a4 in 0x4b175a4 #28 0x04b8709c in 0x4b8709c #29 0x04b8f990 in 0x4b8f990 #30 0x04b8f12c in 0x4b8f12c #31 0x04b18520 in 0x4b18520 #32 0x04b0bf4c in 0x4b0bf4c #33 0x04b0b9a0 in 0x4b0b9a0 #34 0x006fa8b8 in ns4xPluginInstance::HandleEvent(nsPluginEvent *, int *) #35 0x0067cd8c in nsPluginInstanceOwner::Notify(nsITimer *) #36 0x0505bc08 in nsTimerImpl::Fire(void) #37 0x0505bd64 in handleTimerEvent(TimerEventType *) #38 0x05056e80 in PL_HandleEvent #39 0x05056d68 in PL_ProcessPendingEvents #40 0x05057d30 in nsEventQueueImpl::ProcessPendingEvents(void) #41 0x00433b74 in -[EventQueueHandler eventTimer:] #42 0x907e521c in __NSFireTimer #43 0x90163884 in __CFRunLoopDoTimer #44 0x901493e8 in __CFRunLoopRun #45 0x90181578 in CFRunLoopRunSpecific #46 0x92ba34cc in RunCurrentEventLoopInMode #47 0x92bb326c in ReceiveNextEventCommon #48 0x92bda280 in BlockUntilNextEventMatchingListInMode #49 0x93082184 in _DPSNextEvent #50 0x930ccf84 in -[NSApplication nextEventMatchingMask:untilDate:inMode:dequeue:] #51 0x930ca500 in -[NSApplication run] #52 0x930d2598 in NSApplicationMain #53 0x00005024 in main #54 0x00004ed4 in _start #55 0x00004d04 in start Thread 1: #0 0x90025e8c in select #1 0x0101d804 in poll #2 0x01019ecc in _pr_poll_with_poll #3 0x0016a68c in nsSocketTransportService::Run(void) #4 0x050598f0 in nsThread::Main(void *) #5 0x0101b388 in _pt_root #6 0x90021428 in _pthread_body Thread 2: #0 0x9003f188 in semaphore_wait_signal_trap #1 0x9003efa4 in _pthread_cond_wait #2 0x01016474 in PR_WaitCondVar #3 0x0014b2cc in nsDNSService::DequeuePendingQ(void) #4 0x0014acd4 in nsDNSService::Run(void) #5 0x050598f0 in nsThread::Main(void *) #6 0x0101b388 in _pt_root #7 0x90021428 in _pthread_body Thread 3: #0 0x90042d68 in semaphore_timedwait_signal_trap #1 0x9003ef94 in _pthread_cond_wait #2 0x01016210 in pt_TimedWait #3 0x01016488 in PR_WaitCondVar #4 0x0505d38c in TimerThread::Run(void) #5 0x050598f0 in nsThread::Main(void *) #6 0x0101b388 in _pt_root #7 0x90021428 in _pthread_body Thread 4: #0 0x9003f188 in semaphore_wait_signal_trap #1 0x9003efa4 in _pthread_cond_wait #2 0x01016474 in PR_WaitCondVar #3 0x0505aa2c in nsThreadPool::GetRequest(nsIThread *) #4 0x0505b3a0 in nsThreadPoolRunnable::Run(void) #5 0x050598f0 in nsThread::Main(void *) #6 0x0101b388 in _pt_root #7 0x90021428 in _pthread_body Thread 5: #0 0x9003f188 in semaphore_wait_signal_trap #1 0x9003efa4 in _pthread_cond_wait #2 0x90824180 in -[NSConditionLock lockWhenCondition:] #3 0x933515f4 in -[NSUIHeartBeat _heartBeatThread:] #4 0x9081cd38 in forkThreadForFunction #5 0x90021428 in _pthread_body PPC Thread State: srr0: 0x04c0c640 srr1: 0x0208f030 vrsave: 0x00000000 xer: 0x00000000 lr: 0x0509742c ctr: 0x04c0c640 mq: 0x00000000 r0: 0x04c0c640 r1: 0xbfffcf50 r2: 0x00000000 r3: 0x02201090 r4: 0x00960dd8 r5: 0xbfffcfd8 r6: 0x0235a070 r7: 0xbfffd118 r8: 0x00e2f010 r9: 0x04c1c244 r10: 0x00000002 r11: 0x050c63dc r12: 0x04c0c640 r13: 0x0231fab6 r14: 0x00000000 r15: 0x0008a31c r16: 0x02201090 r17: 0xbfffd118 r18: 0x0235a070 r19: 0x020d0af0 r20: 0xbfffd330 r21: 0xbfffd28c r22: 0xbfffd268 r23: 0xbfffd028 r24: 0x050c63dc r25: 0xbfffd198 r26: 0xbfffd02c r27: 0xbfffd198 r28: 0xbfffd108 r29: 0xbfffd028 r30: 0xbfffd02c r31: 0x00720864 console output: 2002-09-06 14:15:56.270 Navigator[631] State changed: state 16, status 0 nsPluginsDir::IsPluginFile: checking /Users/test/Desktop/Chimera 09-05 build.app/ Contents/MacOS/plugins/MRJPlugin.plugin found bundled plugin '/Users/test/Desktop/Chimera 09-05 build.app/Contents/MacOS/ plugins/MRJPlugin.plugin'. nsPluginsDir::IsPluginFile: checking /Library/Internet Plug-Ins/.DS_Store nsPluginsDir::IsPluginFile: checking /Library/Internet Plug-Ins/DRM Plugin.bundle found bundled plugin '/Library/Internet Plug-Ins/DRM Plugin.bundle'. nsPluginsDir::IsPluginFile: checking /Library/Internet Plug-Ins/flashplayer.xpt nsPluginsDir::IsPluginFile: checking /Library/Internet Plug-Ins/nsIQTScriptablePlugin.xpt nsPluginsDir::IsPluginFile: checking /Library/Internet Plug-Ins/PluginLib nsPluginsDir::IsPluginFile: checking /Library/Internet Plug-Ins/QuickTime Plugin.plugin found bundled plugin '/Library/Internet Plug-Ins/QuickTime Plugin.plugin'. nsPluginsDir::IsPluginFile: checking /Library/Internet Plug-Ins/RealPlayer Plugin nsPluginsDir::IsPluginFile: checking /Library/Internet Plug-Ins/Shockwave Flash NP- PPC nsPluginsDir::IsPluginFile: checking /Library/Internet Plug-Ins/Windows Media Plugin found bundled plugin '/Library/Internet Plug-Ins/Windows Media Plugin'. [TV2FP: created wrapper for CFM function main().] [loaded plugin /Library/Internet Plug-Ins/RealPlayer Plugin] [NSPR: bundle loaded succesfully: /Users/test/Desktop/Chimera 09-05 build.app/ Contents/MacOS/plugins/MRJPlugin.plugin] [loaded plugin /Users/test/Desktop/Chimera 09-05 build.app/Contents/MacOS/plugins/ MRJPlugin.plugin] ### MRJPlugin: getPluginBundle() here. ### ### MRJPlugin: CFBundleGetBundleWithIdentifier() succeeded. ### ### MRJPlugin: CFURLGetFSRef() succeeded. ### 2002-09-06 14:16:53.507 Navigator[635] Splash dealloc [TV2FP: created wrapper for CFM function main().] [loaded plugin /Library/Internet Plug-Ins/Shockwave Flash NP-PPC] [NSPR: looking up symbol: NSGetFactory] [NSPR: looking up symbol: main] [loaded plugin /Library/Internet Plug-Ins/Shockwave Flash NP-PPC] [NSPR: looking up symbol: NSGetFactory] [NSPR: looking up symbol: main] [TV2FP: created wrapper for CFM function main().] [loaded plugin /Library/Internet Plug-Ins/Shockwave Flash NP-PPC] [NSPR: looking up symbol: NSGetFactory] [NSPR: looking up symbol: main] [loaded plugin /Library/Internet Plug-Ins/Shockwave Flash NP-PPC] [NSPR: looking up symbol: NSGetFactory] [NSPR: looking up symbol: main] [TV2FP: created wrapper for CFM function main().] [loaded plugin /Library/Internet Plug-Ins/Shockwave Flash NP-PPC] [NSPR: looking up symbol: NSGetFactory] [NSPR: looking up symbol: main] status is failure [loaded plugin /Library/Internet Plug-Ins/Shockwave Flash NP-PPC] [NSPR: looking up symbol: NSGetFactory] [NSPR: looking up symbol: main] [TV2FP: created wrapper for CFM function main().] [loaded plugin /Library/Internet Plug-Ins/Shockwave Flash NP-PPC] [NSPR: looking up symbol: NSGetFactory] [NSPR: looking up symbol: main] Sep 6 14:18:50 Pterosaur crashdump: Crash report written to: /Users/test/Library/Logs/ CrashReporter/Navigator.crash.log nsPluginsDir::IsPluginFile: checking /Users/test/Desktop/Chimera 09-05 build.app/ Contents/MacOS/plugins/MRJPlugin.plugin found bundled plugin '/Users/test/Desktop/Chimera 09-05 build.app/Contents/MacOS/ plugins/MRJPlugin.plugin'. nsPluginsDir::IsPluginFile: checking /Library/Internet Plug-Ins/.DS_Store nsPluginsDir::IsPluginFile: checking /Library/Internet Plug-Ins/DRM Plugin.bundle found bundled plugin '/Library/Internet Plug-Ins/DRM Plugin.bundle'. nsPluginsDir::IsPluginFile: checking /Library/Internet Plug-Ins/flashplayer.xpt nsPluginsDir::IsPluginFile: checking /Library/Internet Plug-Ins/nsIQTScriptablePlugin.xpt nsPluginsDir::IsPluginFile: checking /Library/Internet Plug-Ins/PluginLib nsPluginsDir::IsPluginFile: checking /Library/Internet Plug-Ins/QuickTime Plugin.plugin found bundled plugin '/Library/Internet Plug-Ins/QuickTime Plugin.plugin'. nsPluginsDir::IsPluginFile: checking /Library/Internet Plug-Ins/RealPlayer Plugin nsPluginsDir::IsPluginFile: checking /Library/Internet Plug-Ins/Shockwave Flash NP- PPC nsPluginsDir::IsPluginFile: checking /Library/Internet Plug-Ins/Windows Media Plugin found bundled plugin '/Library/Internet Plug-Ins/Windows Media Plugin'. [NSPR: bundle loaded succesfully: /Users/test/Desktop/Chimera 09-05 build.app/ Contents/MacOS/plugins/MRJPlugin.plugin] [loaded plugin /Users/test/Desktop/Chimera 09-05 build.app/Contents/MacOS/plugins/ MRJPlugin.plugin] ### MRJPlugin: getPluginBundle() here. ### ### MRJPlugin: CFBundleGetBundleWithIdentifier() succeeded. ### ### MRJPlugin: CFURLGetFSRef() succeeded. ### 2002-09-06 14:19:13.353 Navigator[639] Splash dealloc [TV2FP: created wrapper for CFM function main().] [loaded plugin /Library/Internet Plug-Ins/Shockwave Flash NP-PPC] [NSPR: looking up symbol: NSGetFactory] [NSPR: looking up symbol: main] Sep 6 14:19:42 Pterosaur crashdump: Crash report written to: /Users/test/Library/Logs/ CrashReporter/Navigator.crash.log
shrirang, FYI, stack traces should be attached instead of quoted in a comment. Also, it's only necessary to include one stack trace (you quoted two).
Keywords: crash
wonderful, thanks ! winnie sent me a mail too regarding the same thing... can I be forgiven ? ;)
*** Bug 151224 has been marked as a duplicate of this bug. ***
*** Bug 159919 has been marked as a duplicate of this bug. ***
*** Bug 170056 has been marked as a duplicate of this bug. ***
I suspect this also is a dup of bug 158440.
*** Bug 158440 has been marked as a duplicate of this bug. ***
*** Bug 173402 has been marked as a duplicate of this bug. ***
*** Bug 175265 has been marked as a duplicate of this bug. ***
This works for me, now.
Status: NEW → RESOLVED
Closed: 22 years ago
Resolution: --- → FIXED
This is still occuring in the latest nightly build (2002-11-12-04) under 10.2.2
Status: RESOLVED → REOPENED
Resolution: FIXED → ---
-->peterl I'm working on a fix in bug 178985.
Assignee: bnesse → peterl
Status: REOPENED → NEW
Setting dependency per comment 12.
Depends on: 178985
Status: NEW → ASSIGNED
Keywords: patch, review
Priority: -- → P1
Target Milestone: --- → Chimera0.7
No longer depends on: 178985
*** Bug 178985 has been marked as a duplicate of this bug. ***
Attached patch patch v.1 (obsolete) — Splinter Review
This patch fixes the crash with scriptable plugins by introducing new NPPVariables for Mach-O builds.
Looks good to me. Would like to see r= from beard.
Attachment #106042 - Flags: superreview?(sfraser)
Attachment #106042 - Flags: review?(beard)
Comment on attachment 106042 [details] [diff] [review] patch v.1 Looks fine, except that rather than conditionalizing on XP_MACOSX, you might be better off checking the compiled runtime, TARGET_RT_MAC_MACHO.
Attachment #106042 - Flags: review?(beard) → review+
Attached patch final patchSplinter Review
final patch with TARGET_RT_MAC_MACHO simon, can you check this into chimera and sr for the trunk?
Attachment #106042 - Attachment is obsolete: true
Attachment #106408 - Flags: superreview?(sfraser)
Attachment #106408 - Flags: review?(beard)
Comment on attachment 106408 [details] [diff] [review] final patch r=beard
Attachment #106408 - Flags: review?(beard) → review+
Comment on attachment 106408 [details] [diff] [review] final patch sr=sfraser
Attachment #106408 - Flags: superreview?(sfraser) → superreview+
Patch checked in. Thanks Peter!
Status: ASSIGNED → RESOLVED
Closed: 22 years ago22 years ago
Resolution: --- → FIXED
Attachment #106042 - Flags: superreview?(sfraser) → superreview+
Verified in the 2002-11-21-04 NB.
Status: RESOLVED → VERIFIED
*** Bug 172904 has been marked as a duplicate of this bug. ***
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: