Fix bug 167178: prevent crashes due to mismatched binary formats (CFM vs. Macho) by adding new flags for MachO scriptables. patch by peterl, r=beard, sr=sfraser.